<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/post_padding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/post_blog_avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:src="@drawable/user"
        android:layout_marginBottom="@dimen/delimeter_margin"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_toEndOf="@id/post_blog_avatar"
        android:layout_height="@dimen/post_avatar_size"
        android:layout_marginStart="@dimen/post_padding">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/post_reblog_sigh"
                android:layout_marginEnd="@dimen/sign_margin"
                android:text="@string/reblog_sign"
                style="@style/TextViewAverageIcon"/>

            <TextView
                android:id="@+id/post_blog_name"
                android:text="@string/name_hint"
                style="@style/TextViewAverage"/>
        </LinearLayout>

        <TextView
            android:id="@+id/date"
            android:text="@string/date_hint"
            style="@style/TextViewAverageGray"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_title"
        android:text="@string/title_hint"
        style="@style/TextViewBig"
        android:layout_marginTop="@dimen/sign_margin"
        android:layout_below="@id/post_blog_avatar"/>

    <TextView
        android:id="@+id/text_summary"
        android:text="@string/summary_hint"
        style="@style/TextViewAverage"
        android:layout_marginTop="@dimen/sign_margin"
        android:layout_below="@id/text_title"/>

    <TextView
        android:id="@+id/source_url"
        android:text="@string/url_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewAverageLink"
        android:layout_below="@id/text_summary"
        android:layout_marginTop="@dimen/blog_vertical_spacing"
        />


    <TextView
        android:id="@+id/tags"
        android:text="@string/tags_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewAverageGray"
        android:layout_below="@id/source_url"
        android:layout_marginTop="@dimen/sign_margin"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_margin"
        android:layout_below="@id/tags">

        <TextView
            android:id="@+id/likes_sigh"
            android:text="@string/like_sign"
            style="@style/TextViewAverageGrayIcon"
            android:layout_marginEnd="@dimen/photo_padding"/>
        <TextView
            android:id="@+id/post_notes_amount"
            android:text="@string/likes_hint"
            style="@style/TextViewAverageGray"/>
    </LinearLayout>

</RelativeLayout>