<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/post_padding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@id/post_blog_avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:src="@drawable/user"
        android:layout_marginBottom="@dimen/delimeter_margin"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_toEndOf="@id/post_blog_avatar"
        android:layout_height="@dimen/post_avatar_size"
        android:layout_marginStart="@dimen/post_padding">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@id/post_reblog_sigh"
                android:layout_marginEnd="@dimen/sign_margin"
                android:text="@string/reblog_sign"
                style="@style/TextViewAverageIcon"/>

            <TextView
                android:id="@id/post_blog_name"
                android:text="@string/name_hint"
                style="@style/TextViewAverage"/>
        </LinearLayout>

        <TextView
            android:id="@id/date"
            android:text="@string/date_hint"
            style="@style/TextViewAverageGray"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/audio_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_blog_avatar"
        android:layout_marginTop="@dimen/sign_margin"
        android:padding="@dimen/photo_padding">

        <ImageView
            android:id="@+id/album_thumbnail"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorViolet"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/list_padding">

            <ImageView
                android:id="@+id/audio_sign"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/play64" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/blog_vertical_spacing"
                android:layout_marginEnd="@dimen/blog_vertical_spacing"
                android:layout_toEndOf="@id/audio_sign"
                android:layout_toStartOf="@id/album_icon"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/song_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextViewAverageWhite"
                    android:text="@string/song_hint"/>

                <TextView
                    android:id="@+id/artist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextViewAverageWhiteBlurry"
                    android:text="@string/artist_hint"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/album_icon"
                android:layout_width="@dimen/min_image_size"
                android:layout_height="@dimen/min_image_size"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@drawable/note128"/>

        </RelativeLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/audio_caption"
        android:text="@string/caption_hint"
        style="@style/TextViewAverage"
        android:layout_marginTop="@dimen/sign_margin"
        android:layout_below="@id/audio_container" />

    <TextView
        android:id="@id/source_url"
        android:text="@string/url_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewAverageLink"
        android:layout_below="@id/audio_caption"
        android:layout_marginTop="@dimen/blog_vertical_spacing"
        />

    <TextView
        android:id="@id/tags"
        android:text="@string/tags_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextViewAverageGray"
        android:layout_below="@id/source_url"
        android:layout_marginTop="@dimen/sign_margin"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_margin"
        android:layout_below="@id/tags">

        <TextView
            android:id="@id/likes_sigh"
            android:text="@string/like_sign"
            style="@style/TextViewAverageGrayIcon"
            android:layout_marginEnd="@dimen/photo_padding"/>
        <TextView
            android:id="@id/post_notes_amount"
            android:text="@string/likes_hint"
            style="@style/TextViewAverageGray"/>
    </LinearLayout>

</RelativeLayout>